--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -1031,5 +1031,7 @@
   "your_alias_sale_offer": "Esta poñendo a venta este alias.",
   "your_name": "O seu nome",
   "your_passphrase": "O seu contrasinal",
-  "youve_got_burst": "Ten estouro!"
+  "youve_got_burst": "Ten estouro!",
+  "balance_locked": "Saldo bloqueado",
+  "balance_available": "Saldo dispoñible"
 }
