--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -1031,5 +1031,7 @@
   "your_alias_sale_offer": "Has posat aquest Àlies a la venta.",
   "your_name": "El vostre nom",
   "your_passphrase": "La vostre Contrasenya",
-  "youve_got_burst": "Tens Burst!"
+  "youve_got_burst": "Tens Burst!",
+  "balance_locked": "Saldo bloquejat",
+  "balance_available": "Saldo disponible"
 }
