--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -1031,5 +1031,7 @@
   "your_alias_sale_offer": "あなたはこのエイリアスを売りに出しています。",
   "your_name": "名前",
   "your_passphrase": "あなたのパスフレーズ",
-  "youve_got_burst": "あなたはバーストを持っています！"
+  "youve_got_burst": "あなたはバーストを持っています！",
+  "balance_locked": "ロックされたバランス",
+  "balance_available": "利用可能残高"
 }
