--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -1035,5 +1035,7 @@
   "your_alias_sale_offer": "Você está oferecendo este pseudônimo para venda.",
   "your_name": "Seu nome",
   "your_passphrase": "Sua senha",
-  "youve_got_burst": "Você tem Burst!"
+  "youve_got_burst": "Você tem Burst!",
+  "balance_locked": "Saldo Bloqueado",
+  "balance_available": "Saldo disponível"
 }
