--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -1031,5 +1031,7 @@
   "your_alias_sale_offer": "您的該別名正在出售。",
   "your_name": "您的名字",
   "your_passphrase": "您的密碼",
-  "youve_got_burst": "你爆了！"
+  "youve_got_burst": "你爆了！",
+  "balance_locked": "锁定余额",
+  "balance_available": "可用余额"
 }
