--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -1033,5 +1033,15 @@
   "your_passphrase": "Ваш пароль",
   "youve_got_burst": "У тебя есть взрыв!",
   "balance_locked": "Заблокированный баланс",
-  "balance_available": "доступные средства"
+  "balance_available": "доступные средства",
+  "commitment": "Обязательство",
+  "set_commitment": "Установить обязательство",
+  "add_commitment": "Добавить обязательство",
+  "revoke_commitment": "Отозвать обязательство",
+  "reward_recipient_assignment": "Назначение получателя вознаграждения",
+  "mining": "Добыча полезных ископаемых",
+  "applied_commitment": "Прикладное обязательство",
+  "toggle_commitment_mode": "Переключайтесь между добавлением и отменой обязательства по майнингу",
+  "success_set_commitment": "Успешно обновлено ваше обязательство по добыче полезных ископаемых",
+  "error_set_commitment": "Ошибка при обновлении обязательств по добыче полезных ископаемых. Имейте в виду, что вам нужно подождать 1440 блоков, прежде чем вы сможете отозвать свое обязательство."
 }
