--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -1033,5 +1033,15 @@
   "your_passphrase": "Ваша парольна фраза",
   "youve_got_burst": "У вас вибух!",
   "balance_locked": "Заблокований баланс",
-  "balance_available": "Доступний залишок"
+  "balance_available": "Доступний залишок",
+  "commitment": "Прихильність",
+  "set_commitment": "Встановіть зобов'язання",
+  "add_commitment": "Додати зобов’язання",
+  "revoke_commitment": "Відкликати зобов'язання",
+  "reward_recipient_assignment": "Призначення отримувача винагороди",
+  "mining": "Видобуток корисних копалин",
+  "applied_commitment": "Застосовувані зобов’язання",
+  "toggle_commitment_mode": "Переключіться тут між додаванням та скасуванням зобов’язання щодо майнінгу",
+  "success_set_commitment": "Успішно оновлено ваше зобов'язання щодо видобутку корисних копалин",
+  "error_set_commitment": "Помилка під час оновлення зобов’язання щодо майнінгу. Пам’ятайте, що вам потрібно почекати 1440 блоків, перш ніж ви зможете скасувати своє зобов’язання."
 }
