--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -1033,5 +1033,15 @@
   "your_passphrase": "Вашата парола",
   "youve_got_burst": "Имате Burst!",
   "balance_locked": "Заключен баланс",
-  "balance_available": "Наличен баланс"
+  "balance_available": "Наличен баланс",
+  "commitment": "Ангажираност",
+  "set_commitment": "Поставете ангажимент",
+  "add_commitment": "Добавете ангажимент",
+  "revoke_commitment": "Отмени ангажимента",
+  "reward_recipient_assignment": "Възлагане на получателя",
+  "mining": "Минен",
+  "applied_commitment": "Приложен ангажимент",
+  "toggle_commitment_mode": "Превключете тук между добавяне и отмяна на ангажимента за копаене",
+  "success_set_commitment": "Успешно актуализиран ангажимент за добив",
+  "error_set_commitment": "Грешка при актуализиране на ангажимента за добив. Имайте предвид, че трябва да изчакате 1440 блока, преди да можете да оттеглите ангажимента си."
 }
