--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -1033,5 +1033,15 @@
   "your_passphrase": "Η φράση πρόσβασης σας",
   "youve_got_burst": "Έχετε έκρηξη!",
   "balance_locked": "Κλειδωμένο υπόλοιπο",
-  "balance_available": "διαθέσιμο υπόλοιπο"
+  "balance_available": "διαθέσιμο υπόλοιπο",
+  "commitment": "Δέσμευση",
+  "set_commitment": "Ορίστε τη δέσμευση",
+  "add_commitment": "Προσθήκη δέσμευσης",
+  "revoke_commitment": "Ανάκληση δέσμευσης",
+  "reward_recipient_assignment": "Ανάθεση παραλήπτη ανταμοιβής",
+  "mining": "Εξόρυξη",
+  "applied_commitment": "Εφαρμοσμένη δέσμευση",
+  "toggle_commitment_mode": "Εναλλαγή εδώ μεταξύ προσθήκης και ανάκλησης της δέσμευσης εξόρυξης",
+  "success_set_commitment": "Ενημερώθηκε με επιτυχία η δέσμευσή σας για εξόρυξη",
+  "error_set_commitment": "Σφάλμα κατά την ενημέρωση της δέσμευσης εξόρυξης. Λάβετε υπόψη ότι πρέπει να περιμένετε 1440 τετράγωνα για να μπορέσετε να ανακαλέσετε τη δέσμευσή σας."
 }
