--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -1033,5 +1033,15 @@
   "your_passphrase": "Votre phrase de passe",
   "youve_got_burst": "Vous avez Burst!",
   "balance_locked": "Solde bloqué",
-  "balance_available": "Solde disponible"
+  "balance_available": "Solde disponible",
+  "commitment": "Engagement",
+  "set_commitment": "Définir un engagement",
+  "add_commitment": "Ajouter un engagement",
+  "revoke_commitment": "Révoquer l'engagement",
+  "reward_recipient_assignment": "Attribution de récipiendaire de récompense",
+  "mining": "Exploitation minière",
+  "applied_commitment": "Engagement appliqué",
+  "toggle_commitment_mode": "Basculer ici entre l'ajout et la révocation de l'engagement minier",
+  "success_set_commitment": "Mise à jour réussie de votre engagement minier",
+  "error_set_commitment": "Erreur lors de la mise à jour de l'engagement de minage. N'oubliez pas que vous devez attendre 1440 blocs avant de pouvoir révoquer votre engagement."
 }
