--- a/web/angular-wallet/src/locales/zh-cn.json
+++ b/web/angular-wallet/src/locales/zh-cn.json
@@ -1033,5 +1033,15 @@
   "your_passphrase": "您的密码",
   "youve_got_burst": "你爆了！",
   "balance_locked": "锁定余额",
-  "balance_available": "可用余额"
+  "balance_available": "可用余额",
+  "commitment": "承诺",
+  "set_commitment": "设定承诺",
+  "add_commitment": "增加承诺",
+  "revoke_commitment": "撤销承诺",
+  "reward_recipient_assignment": "奖励收件人分配",
+  "mining": "矿业",
+  "applied_commitment": "应用承诺",
+  "toggle_commitment_mode": "在添加和撤销采矿承诺之间切换",
+  "success_set_commitment": "成功更新您的采矿承诺",
+  "error_set_commitment": "更新挖矿承诺时出错。请注意，您需要等待1440块才能撤消承诺。"
 }
